Simplify directory structure (#12)
* Also fixes startup warnings from Spring (due to Java 11)